// Copyright 2015 Google LLC. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package build;

message Build {

  // Fingerprint, e.g. "google/mysid/toro:4.0.4/IMM06/243892:userdebug/dev-keys"
  optional string fingerprint = 1;

  // Carrier, e.g. "google"
  optional string brand = 2;

  // Product name, e.g. "mysid"
  optional string product = 3;

  // Product name, e.g. "toro"
  optional string device = 4;

  // Release version, e.g. "4.0.4"
  optional string release = 5;

  // Build id, e.g. "IMM06"
  optional string build_id = 6;

  // Incremental build id, e.g. "243892"
  optional string incremental = 7;

  // Type of build, e.g. "userdebug"
  optional string type = 8;

  // Tags, e.g. "dev-keys"
  repeated string tags = 9;
}
